FIX&FEAT:Corrige y añade funcionalidades a explorador de archivos

--- a/Semana3/Explorador de archivos/statics/style/style.css
+++ b/Semana3/Explorador de archivos/statics/style/style.css
@@ -4,32 +4,37 @@ h1{
     padding: 30px;
     text-align: center;
 }
-
 form{
     background-color: beige;
-    position:relative;
+    
     border-radius: 15%;
     padding:20px;
-    /* display:flex;
+    display:flex;
+    
     align-items: center;
-    justify-content: center; */
+    justify-content: center; 
+    
 }
-
 .contenedor{
     display:flex;
     justify-content: center;
     align-items:center;
     top:auto;
+    flex-direction: column;
     /* position:absolute;
     left:42%; */
     gap:1vw;
     flex-wrap: wrap;
+    
 }
 
-/* #act{
-    z-index: -1;
-}
-
+/* #apf{
+    position:absolute;
+    margin:auto;
+    left:50%;
+    
+} */
+/*
 #esp{
     z-index: 0;
 }
